# secwexen-arsenal

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DISCLAIMER.md  ETHICS.md  Makefile  README.md  SECURITY.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature_request.yml  security_issue.yml
.github/workflows/: devskim.yml  makefile.yml  powershell.yml  pylint.yml
demo/: README.md  defensive_demo.py  offensive_demo.py
docs/: architecture.md  basic_usage.md  ethics.md  installation.md  roadmap.md  usage.md
examples/: basic_usage.md  defensive_demo.py  offensive_demo.py  osint_demo.py
tests/: __init__.py  test_core.py  test_tools.py  test_utils.py
tools/automation/bash/: auto_backup.sh  cleanup.sh  deploy_script.sh
tools/automation/powershell/: Auto-Deploy.ps1  Backup-Files.ps1  Sync-Drives.ps1
tools/defensive/bash/: backup_watch.sh  check_integrity.sh  monitor_logs.sh
tools/defensive/powershell/: Check-DefenderStatus.ps1  Get-EventLogs.ps1  Monitor-Processes.ps1
tools/defensive/python/: firewall_watcher.py  log_monitor.py  malware_scanner.py
tools/offensive/rust/fast_port_scanner/: Cargo.toml
tools/osint/python/: email_harvester.py  subdomain_finder.py  username_lookup.py
utils/: file_ops.py  logger.py  validators.py
