[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secwexen-arsenal"
description = "Personel toolkit for cybersecurity research, pentesting, and threat analysis, featuring Python, Rust, Bash, and PowerShell tools."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "secwexen" }
]

keywords = [
    "python",
    "bash",
    "rust",
    "osint",
    "powershell",
    "cybersecurity",
    "bug-bounty",
    "threat-hunting",
    "malware-analysis",
    "pentest",
    "digital-forensics",
    "ethical-hacking",
    "network-security",
    "threat-analysis",
    "security-automation",
    "redteam",
    "exploit-development",
    "vulnerability-research",
    "automation-scripts",
    "cli-security-tool"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Security :: Vulnerability Management"
]

dependencies = [
    "requests",
    "aiohttp",
    "rich",
    "colorama",
    "typer",
    "python-dotenv",
    "pydantic",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "cryptography>=46.0.5",
    "dnspython",
    "python-whois",
    "shodan",
    "tqdm"
]

dev_dependencies = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pylint",
    "mypy",
    "bandit",
    "pre-commit"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pylint",
    "mypy",
    "bandit",
    "pre-commit"
]

[project.urls]
Homepage = "https://secwexen.github.io/"
Repository = "https://github.com/secwexen/secwexen-arsenal"

[tool.setuptools.packages.find]
where = ["."]
