[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secwexen-arsenal"
description = "Cybersecurity expert personal cybersecurity toolkit repository."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "secwexen" }
]

keywords = [
    "python",
    "cybersecurity",
    "security-research",
    "cybersecurity-toolkit",
    "defensive-security",
    "digital-forensics",
    "blue-team",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Security"
]

dependencies = [
    "requests",
    "aiohttp",
    "rich",
    "colorama",
    "typer",
    "python-dotenv",
    "pydantic",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "cryptography>=46.0.5",
    "dnspython",
    "python-whois",
    "shodan",
    "tqdm"
]

dev_dependencies = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pylint",
    "mypy",
    "bandit",
    "pre-commit"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pylint",
    "mypy",
    "bandit",
    "pre-commit"
]

[project.urls]
Homepage = "https://secwexen.github.io/"
Repository = "https://github.com/secwexen/secwexen-arsenal"

[tool.setuptools.packages.find]
where = ["."]
